# Hello-CMake

./: CMakeLists.txt  Main.cpp
